--- a/ToolBox/ToolBox/ToolBox.csproj
+++ b/ToolBox/ToolBox/ToolBox.csproj
@@ -56,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ScoreboardWinMain.xaml.cs">
+      <DependentUpon>ScoreboardWinMain.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ToolboxMain.xaml.cs">
       <DependentUpon>ToolboxMain.xaml</DependentUpon>
     </Compile>
@@ -87,6 +90,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ScoreboardWinMain.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ToolboxMain.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
